# Apeiron

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  TODO.md  configure  dependencies.txt  run.sh
.github/workflows/: ci.yml
cmake/: FindCairo.cmake  FindCairomm.cmake  FindFreetype.cmake  FindHarfBuzz.cmake  FindSigC++.cmake  Findglib.cmake  Findglibmm.cmake  Findpango.cmake  Findpangomm.cmake  LibFindMacros.cmake
dependencies/GLEW/lib/: libGLEW.so.2.2.0
docs/: CppTypeCategories.txt
include/: BasicMath.h  Comparators.h  Concepts.h  Conditionals.h  Constants.h  Debug.h  FloatingPoint.h  Global.h  Loops.h  Macros.h  Math.h  Print.h  Random.h  StandardLibrary.h  Standard_Library.h  String.h  Testing.h  Types.h
libs/Array/: CMakeLists.txt
libs/Array/include/: Array.h
libs/Array/src/: Array.cpp
libs/Array/test/: ArrayUnitTest.cpp
libs/Benchmark/: CMakeLists.txt
libs/Benchmark/include/: Benchmark.h  Timer.h
libs/DataContainer/: CMakeLists.txt
libs/DataContainer/include/: Array.h  Array.tpp  Detail.h  List.h  MultiArray.h  MultiArray.tpp  NumericContainer.h  NumericContainer.tpp
libs/DataContainer/src/: Array.cpp  MultiArray.cpp  NumericContainer.cpp
libs/DataContainer/test/: UnitTestArray.cpp  UnitTestNumericContainer.cpp
libs/DataContainers/: CMakeLists.txt
libs/DataContainers/include/: Array.h  List.h  MultiArray.h  Support.h
libs/DataContainers/src/: Array.cpp  MultiArray.cpp
libs/DataContainers/test/: UnitTestArray.cpp
libs/FileManager/: CMakeLists.txt
libs/FileManager/include/: File.h  File.tpp  FileHandler.h  FileIO.h  FileReader.h  FileSystem.h  FileWriter.h
libs/FileManager/src/: File.cpp  FileHandler.cpp  FileReader.cpp  FileSystem.cpp  FileWriter.cpp
libs/FileManager/test/: UnitTestFileHandler.cpp
libs/FileManager/test/data/non_empty_directory/: non_empty_file.txt
libs/Functional/: CMakeLists.txt
libs/Functional/include/: Explicit.h  Piecewise.h
libs/Functional/src/: Explicit.cpp  Piecewise.cpp
libs/Graph/: CMakeLists.txt
libs/Graph/include/: ADTree.h  Graph.h  KDTree.h  Tree.h
libs/Graph/src/: Graph.cpp
libs/LinearAlgebra/: CMakeLists.txt
libs/LinearAlgebra/include/: Matrix.h  Vector.h  VectorOperations.h
libs/LinearAlgebra/src/: Matrix.cpp  Vector.cpp
libs/LinearAlgebra/test/: UnitTestVector.cpp
libs/Manifold/: CMakeLists.txt
libs/Manifold/include/: Categories.h  Curve.h  Curve.tpp  Manifold.h  Manifold.tpp  Surface.h
libs/Manifold/src/: Curve.cpp  Manifold.cpp  Surface.cpp
libs/Manifold/test/: UnitTestCurve.cpp
libs/Polytope/: CMakeLists.txt
libs/Polytope/include/: Categories.h  Polygon.h  Polyhedron.h  Polytope.h
libs/Polytope/src/: Categories.cpp  Polygon.cpp  Polytope.cpp
libs/Sort/: CMakeLists.txt
libs/Sort/include/: Sort.h
libs/Sort/src/: Sort.cpp
libs/Tensor/: CMakeLists.txt
libs/Tensor/include/: Tensor.h
libs/Tensor/src/: Tensor.cpp
libs/Visualiser/: CMakeLists.txt
libs/Visualiser/data/: render_text.tex
libs/Visualiser/include/: Action.h  Action.tpp  ActionBase.h  Animator.h  BoundaryMesh.h  Buffers.h  Camera.h  Colour.h  FrameTexture.h  GLDebug.h  GLTypes.h  GUI.h  Geometry.h  Glyph.h  GlyphSheet.h  HDR.h  Light.h  Material.h  Mesh.h  Model.h  ModelFactory.h  ModelGroup.h  ModelObject.h  Object.h  ObjectFactory.h  ParseTeX.h  ParseTeX.tpp  PathTracer.h  PostProcessor.h  RenderObject.h  Renderer.h  Scene.h  Scene.tpp  Shader.h  Shadow.h  Shapes.h  Stencil.h  String.h  SubModel.h  TeXBox.h  (+9 more)
libs/Visualiser/latex/: render_text.tex  write_boxes.lua
libs/Visualiser/resources/latex/: texbox.tex  write_boxes.lua
libs/Visualiser/resources/shaders/: Advanced.glsl  Basic.glsl  Blend.glsl  Blur.glsl  Default.glsl  DirectionalShadow.glsl  FrameBuffer.glsl  General.glsl  HDR.glsl  Intermediate.glsl  Line.glsl  Minimal.glsl  PointShadow.glsl  Shadow.glsl
libs/Visualiser/src/: Action.cpp  ActionBase.cpp  Animator.cpp  Buffers.cpp  Camera.cpp  FrameTexture.cpp  GUI.cpp  Geometry.cpp  Glyph.cpp  GlyphSheet.cpp  HDR.cpp  Light.cpp  Mesh.cpp  Model.cpp  ModelFactory.cpp  ModelGroup.cpp  ObjectFactory.cpp  ParseTeX.cpp  PostProcessor.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  Shadow.cpp  Stencil.cpp  String.cpp  TeXBox.cpp  TeXGlyph.cpp  TeXGlyphGroup.cpp  Texture.cpp  Transition.cpp  Visualiser.cpp  Window.cpp
libs/Visualiser/test/: UnitTestParseTeX.cpp  VisualiserTest.cpp  VisualiserTest.h
src/: main.cpp
test/: ApeironTest.h  ApeironUnitTest.cpp  UnitTestApeiron.cpp  UnitTestBasicMath.cpp  UnitTestComparators.cpp  UnitTestMath.cpp  UnitTestString.cpp
