include_directories(${PROJECT_SOURCE_DIR}/libs/Visualiser)

set(SOURCE_FILES
        include/Action.h
        include/ActionBase.h
        include/Buffers.h
        include/Camera.h
        include/Colour.h
        include/GLDebug.h
        include/GLTypes.h
        include/TeXGlyph.h
        include/GlyphSheet.h
        include/GUI.h
        include/Light.h
        include/ParseTeX.h
        include/ParseTeX.tpp
        include/Material.h
        include/Mesh.h
        include/ModelGroup.h
        include/ModelFactory.h
        include/ModelObject.h
        include/Scene.h
        include/PostProcessor.h
        include/Shader.h
        include/Shadow.h
        include/TeXGlyphGroup.h
        include/Model.h
        include/TeXBox.h
        include/Texture.h
        include/Transition.h
        include/Visualiser.h
        include/Window.h
        ../../external/stb_image/stb_image.h
        include/Action.tpp
        src/ActionBase.cpp
        src/Buffers.cpp
        src/Camera.cpp
        src/TeXGlyph.cpp
        src/GlyphSheet.cpp
        src/GUI.cpp
        src/Light.cpp
        src/ParseTeX.cpp
        src/Mesh.cpp
        src/ModelGroup.cpp
        src/ModelFactory.cpp
        src/Scene.cpp
        src/PostProcessor.cpp
        src/Shader.cpp
        src/Shadow.cpp
        src/TeXGlyphGroup.cpp
        src/Model.cpp
        src/TeXBox.cpp
        src/Texture.cpp
        src/Transition.cpp
        src/Visualiser.cpp
        src/Window.cpp
        ../../external/stb_image/stb_image.cpp)

set(LINK_LIBRARIES
        ${OPENGL_LIBRARIES}
        ${GLEW_LIBRARIES}
        DataContainerLibrary
        FileManagerLibrary
        FunctionalLibrary
        LinearAlgebraLibrary
        glfw
        ImGui)

add_library(VisualiserLibrary ${SOURCE_FILES})
target_include_directories(VisualiserLibrary SYSTEM PRIVATE ../../external/stb_image)
target_link_libraries(VisualiserLibrary ${LINK_LIBRARIES})